--- a/index.html
+++ b/index.html
@@ -157,9 +157,11 @@
 
                     <!-- Download Button -->
                     <div class="text-center mt-4">
-                        <a href="YOUR_ZIP_FILE_LINK_HERE" download class="btn btn-primary btn-lg">
-                            Download Extension (.zip)
+                        <a href="https://drive.google.com/uc?export=download&id=12juaqd0L-5wbV1mcf3cW6uR9Te9xOF-p" 
+                        class="btn btn-primary btn-lg">
+                        Download Extension (.zip)
                         </a>
+
                     </div>
                 </div>
             </div>
@@ -208,8 +210,15 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="service-card text-center">
+                        <div class="service-icon">⚡</div>
+                        <h3>Easy Interactive </h3>
+                        <p>Enjoy a seamless users experience with simple steps </p>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="service-card text-center">
                         <div class="service-icon">💬</div>
-                        <h3>Easy Interactive Chat Interface</h3>
+                        <h3>Interactive Chat Interface</h3>
                         <p>Engage with an intuitive chat system for instant responses and guidance.</p>
                     </div>
                 </div>
